--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "chalk": "^4.1.2",
     "cli-table": "^0.3.11",
     "openai": "^3.2.1",
