--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
   },
   "include": [
     "src/**/*"
