--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-copilot-cli",
-  "version": "1.0.16",
+  "version": "1.0.18",
   "main": "index.js",
   "description": "This CLI tool uses the ChatGPT language model to create commands. This allows you to create a list of tasks and perform them sequentially, optimizing your workflow and increasing the efficiency of repetitive actions..",
   "scripts": {
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "ajv": "^8.12.0",
+    "axios": "^1.4.0",
     "chalk": "^4.1.2",
     "cli-table": "^0.3.11",
     "commander": "^10.0.1",
