--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-copilot-cli",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "main": "index.js",
   "description": "This CLI tool uses the ChatGPT language model to create commands. This allows you to create a list of tasks and perform them sequentially, optimizing your workflow and increasing the efficiency of repetitive actions..",
   "scripts": {
@@ -38,7 +38,9 @@
     "chalk": "^4.1.2",
     "cli-table": "^0.3.11",
     "commander": "^10.0.1",
+    "langchain": "^0.0.69",
     "openai": "^3.2.1",
+    "typeorm": "^0.3.15",
     "winston": "^3.8.2"
   },
   "repository": {
