--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "auto-copilot-cli",
-  "version": "1.0.52",
+  "version": "1.0.53",
   "main": "index.js",
   "description": "This CLI tool uses the ChatGPT language model to create commands. This allows you to create a list of tasks and perform them sequentially, optimizing your workflow and increasing the efficiency of repetitive actions..",
   "scripts": {
     "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "pretty": "prettier --write ."
   },
   "bin": {
     "auto-copilot-cli": "cli.js",
@@ -43,6 +44,7 @@
     "langchain": "^0.0.69",
     "openai": "^3.2.1",
     "ora": "^5.4.1",
+    "semver": "^7.5.0",
     "typeorm": "^0.3.15",
     "winston": "^3.8.2"
   },
